[tool.poetry]
name = "ansible-role-pyenv"
version = "2.6.0"
description = "Ansible role to install pyenv."
authors = ["staticdev <staticdev-support@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
